--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="./assets/images/baseball.jpeg" alt="New York" width="1200" height="700">
+          <img src="./assets/images/ball.jpeg" alt="New York" width="1200" height="700">
           <div class="carousel-caption">
             <h3></h3>
-            <p>A past time like no other.</p>
+            <p>A past time like no other</p>
           </div>      
         </div>
   
@@ -178,7 +178,7 @@
   </div>
 
   <div class="col-sm-4">
-    <p class="text-center"><strong>Joe Dirt </strong></p><br>
+    <p class="text-center"><strong>Joe Dirt</strong></p><br>
     <a href="#demo" data-toggle="collapse">
       <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
@@ -187,6 +187,7 @@
       <p>Loves long walks on the beach</p>
       <p>Member since 1988</p>
     </div>
+
   </div>
 
   <div class="col-sm-4">
@@ -199,6 +200,12 @@
       <p>Loves long walks on the beach</p>
       <p>Member since 1988</p>
     </div>
+
+
+  <!-- See ENTIRE ROSTER -->
+    <form action="./roster.html" target="_blank">
+      <input type="submit" value="See All" />
+  </form>
   </div>
 
 
