--- a/index.html
+++ b/index.html
@@ -36,15 +36,7 @@
           <li><a href="#staff">STAFF</a></li>
           <li><a href="#roster">ROSTER</a></li>
           <li><a href="#schedule">SCHEDULE</a></li>
-          
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE
-            <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">SHOP</a></li>
-              <li><a href="#">ALUMNI</a></li>
-            </ul>
-          </li>
+          <li> <a href="https://teamlocker.squadlocker.com/#/lockers/throwbacks-baseball-club?_k=t2jlxj" target="_blank">SHOP</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
         </ul>
       </div>
@@ -122,7 +114,7 @@
       <div class="col-sm-4">
         <p class="text-center"><strong>Michael Brown</strong></p><br>
         <a href="#me" data-toggle="collapse">
-          <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
         </a>
         <div id="me" class="collapse">
           <p>Guitarist and Lead Vocalist</p>
@@ -134,7 +126,7 @@
       <div class="col-sm-4">
         <p class="text-center"><strong>Matt Brown</strong></p><br>
         <a href="#demo2" data-toggle="collapse">
-          <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
         </a>
 
         <div id="demo2" class="collapse">
@@ -147,7 +139,7 @@
       <div class="col-sm-4">
         <p class="text-center"><strong>Jake Roberson</strong></p><br>
         <a href="#demo3" data-toggle="collapse">
-          <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
         </a>
         <div id="demo3" class="collapse">
           <p>Bass player</p>
@@ -168,7 +160,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Joe Dirt </strong></p><br>
     <a href="#demo" data-toggle="collapse">
-      <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
     <div id="demo" class="collapse">
       <p>Guitarist and Lead Vocalist</p>
@@ -180,7 +172,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Joe Dirt</strong></p><br>
     <a href="#demo" data-toggle="collapse">
-      <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
     <div id="demo" class="collapse">
       <p>Guitarist and Lead Vocalist</p>
@@ -193,7 +185,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Joe Dirt </strong></p><br>
     <a href="#demo" data-toggle="collapse">
-      <img src="./assets/images/me.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
     <div id="demo" class="collapse">
       <p>Guitarist and Lead Vocalist</p>
