--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <title>Basbeall 2.0</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
@@ -57,7 +57,7 @@
           <img src="./assets/images/ball.jpeg" alt="New York" width="1200" height="700">
           <div class="carousel-caption">
             <h3></h3>
-            <p>A past time like no other</p>
+            <p> </p>
           </div>      
         </div>
   
@@ -158,39 +158,39 @@
 <div class="row">
 
   <div class="col-sm-4">
-    <p class="text-center"><strong>Joe Dirt </strong></p><br>
+    <p class="text-center"><strong> </strong></p><br>
     <a href="#demo" data-toggle="collapse">
       <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
     <div id="demo" class="collapse">
-      <p>Guitarist and Lead Vocalist</p>
-      <p>Loves long walks on the beach</p>
-      <p>Member since 1988</p>
+      <p>   </p>
+      <p>    </p>
+      <p></p>
     </div>
   </div>
 
   <div class="col-sm-4">
-    <p class="text-center"><strong>Joe Dirt</strong></p><br>
+    <p class="text-center"><strong> </strong></p><br>
     <a href="#demo" data-toggle="collapse">
       <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
     <div id="demo" class="collapse">
-      <p>Guitarist and Lead Vocalist</p>
-      <p>Loves long walks on the beach</p>
-      <p>Member since 1988</p>
+      <p> </p>
+      <p></p>
+      <p></p>
     </div>
 
   </div>
 
   <div class="col-sm-4">
-    <p class="text-center"><strong>Joe Dirt </strong></p><br>
+    <p class="text-center"><strong>  </strong></p><br>
     <a href="#demo" data-toggle="collapse">
       <img src="./assets/images/throwbacks.png" class="img-circle person" alt="Random Name" width="255" height="255">
     </a>
     <div id="demo" class="collapse">
-      <p>Guitarist and Lead Vocalist</p>
-      <p>Loves long walks on the beach</p>
-      <p>Member since 1988</p>
+      <p>   </p>
+      <p></p>    
+      <p> </p>
     </div>
 
 
@@ -208,18 +208,17 @@
   <div id="schedule" class="bg-1">
     <div class="container">
       <h3 class="text-center">UPCOMING SCHEDULE</h3>
-      <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=bWNtOXUxOGkwNmVxNTh0dHFwcnA2MW12YmtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23D81B60&amp;color=%230B8043" style="border:solid 1px #777" width="1000" height="600" frameborder="0" scrolling="no"></iframe>
+      <iframe src="https://calendar.google.com/calendar/embed?src=vtda6c11j9gjircbi7dj29id80%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="900" height="600" frameborder="0" scrolling="no"></iframe>    
     </div>
   </div>
   
       <!-- Container (Contact Section) -->
   <div id="contact" class="container">
     <h3 class="text-center">Contact</h3>
-  
-    <div class="row">
+     <div class="row">
       <div class="col-md-4">
         <p><span class="glyphicon glyphicon-map-marker"></span> Tennessee</p>
-        <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
+        <p><span class="glyphicon glyphicon-phone"></span>Phone: 615-772-4676</p>
         <p><span class="glyphicon glyphicon-envelope"></span> throwbacksbaseball@gmail.com</p>
       </div>
       <div class="col-md-8">
@@ -240,8 +239,10 @@
         </div>
       </div>
     </div>
+  
     <br>
 
+<!-- Starts SM -->
     <h3 class="text-center">Social Media</h3>  
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#home">Twitter</a></li>
@@ -250,7 +251,7 @@
     <!-- Twitter-->
     <div class="tab-content">
       <div id="home" class="tab-pane fade in active">
-      <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" href="https://twitter.com/BroadwayBacks"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </div>
   
