--- a/roster.html
+++ b/roster.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css'>
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
         <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
@@ -270,7 +270,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Lipscomb Academy, 2022<br><br>Uncommited<br><br>TBA / TBA</p>
+                                  <p>Lipscomb Academy, 2022<br><br>Uncommited<br><br>5'7 / 150lbs</p>
                               </div>
                           </div>
                       </div>
@@ -525,7 +525,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Franklin High School, 2022<br><br>Uncommited<br><br>tba / tba</p>
+                              <p>Franklin High School, 2022<br><br>Uncommited<br><br>5'11 / 170lbs</p>
                             </div>
                         </div>
                     </div>
