moved contact form

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="#roster">ROSTER</a></li>
           <li><a href="#schedule">SCHEDULE</a></li>
           <li> <a href="https://teamlocker.squadlocker.com/#/lockers/throwbacks-baseball-club?_k=t2jlxj" target="_blank">SHOP</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -200,6 +200,7 @@
 </div>
   </div>
   
+
   <!-- Container Schedule -->
   <div id="schedule" class="bg-1">
     <div class="container">
@@ -207,39 +208,11 @@
       <iframe src="https://calendar.google.com/calendar/embed?src=vtda6c11j9gjircbi7dj29id80%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="950" height="600" frameborder="0" scrolling="no"></iframe>    
     </div>
   </div>
-  
-      <!-- Container (Contact Section) -->
-  <div id="contact" class="container">
-    <h3 class="text-center">Contact</h3>
-     <div class="row">
-      <div class="col-md-4">
-        <p><span class="glyphicon glyphicon-map-marker"></span> Tennessee</p>
-        <p><span class="glyphicon glyphicon-phone"></span>Phone: 615-772-4676</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> throwbacksbaseball@gmail.com</p>
-      </div>
-      <div class="col-md-8">
-        <div class="row">
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-          </div>
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-          </div>
-        </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
-        <br>
-        <div class="row">
-          <div class="col-md-12 form-group">
-            <button class="btn pull-right" type="submit">Send</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <br>
 
-<!-- Starts SM -->
-    <h3 class="text-center">Social Media</h3>  
+  <br><br>
+
+<!-- Starts Social -->
+    <h3 class="text-center">SOCIAL MEDIA</h3>  
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#home">Twitter</a></li>
     </ul>
@@ -251,8 +224,34 @@
       </div>
     </div>
   
-  <!-- Image of location/map -->
-  <img src="" class="img-responsive" style="width:100%">
+    <!-- Contact Form -->
+    <div id="contact" class="container">
+      <h3 class="text-center">Contact</h3>
+       <div class="row">
+        <div class="col-md-4">
+          <p><span class="glyphicon glyphicon-map-marker"></span> Tennessee</p>
+          <p><span class="glyphicon glyphicon-phone"></span>Phone: 615-772-4676</p>
+          <p><span class="glyphicon glyphicon-envelope"></span> throwbacksbaseball@gmail.com</p>
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            </div>
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+            </div>
+          </div>
+          <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+          <br>
+          <div class="row">
+            <div class="col-md-12 form-group">
+              <button class="btn pull-right" type="submit">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>  
   
   <!-- Footer -->
   <footer class="text-center">
