--- a/staff.html
+++ b/staff.html
@@ -213,7 +213,7 @@
             <!-- Coach 1 -->
     <div class="col" ontouchstart="this.classList.toggle('hover');">
         <div class="container">
-            <div class="front" style="background-image: url(./assets/images/throwbacks.png)">
+            <div class="front" style="background-image: url(./assets/images/michaelbrown.jpg)">
                 <div class="inner">
                 <p>Mike Brown</p>
       <span>Owner / Head Coach</span>
@@ -231,7 +231,7 @@
 <!-- Coach 2 -->
     <div class="col" ontouchstart="this.classList.toggle('hover');">
         <div class="container">
-            <div class="front" style="background-image: url(./assets/images/throwbacks.png)">
+            <div class="front" style="background-image: url(./assets/images/mattbrown.jpg)">
                 <div class="inner">
                     <p>Matt Brown</p>
                    <span>Position Coach </span>
@@ -249,7 +249,7 @@
 <!-- Coach 3 -->
     <div class="col" ontouchstart="this.classList.toggle('hover');">
         <div class="container">
-            <div class="front" style="background-image: url(./assets/images/throwbacks.png)">
+            <div class="front" style="background-image: url(./assets/images/jakeroberson.jpg)">
                 <div class="inner">
                     <p>Jake Roberson</p>
                        <span>Pitching Coach</span>
