--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
   
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="./assets/images/ball.jpeg" alt="New York" width="1200" height="700">
+          <img src="./assets/images/picture4.jpg" alt="New York">
           <div class="carousel-caption">
-            <h3>baseball</h3>
           </div>      
         </div>
   
         <div class="item">
-          <img src="./assets/images/ball.jpeg" alt="Chicago" width="1200" height="700">
+          <img src="./assets/images/picture4.jpg" alt="Chicago">
           <div class="carousel-caption">
-            <h3>Throwbacks</h3>
           </div>      
         </div>
       
         <div class="item">
-          <img src="./assets/images/ball.jpeg" alt="Los Angeles" width="1200" height="700">
+          <img src="./assets/images/picture4.jpg" alt="Los Angeles">
           <div class="carousel-caption">
-            <h3>LA</h3>
           </div>      
         </div>
+
+
       </div>
   
       <!-- Left and right controls -->
@@ -106,7 +106,7 @@
     <div class="col-sm-4">
       <p class="text-center"><strong> </strong></p><br>
       <a href="./staff.html" target="_blank">
-        <img src="./assets/images/michaelbrown.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="./assets/images/michaelbrown.jpg" class="img-rounded person" alt="Random Name" width="200" height="300">
       </a>
   
     </div>
@@ -114,17 +114,16 @@
     <div class="col-sm-4">
       <p class="text-center"><strong> </strong></p><br>
       <a href="./staff.html" target="_blank">
-        <img src="./assets/images/mattbrown.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="./assets/images/mattbrown.jpg" class="img-rounded person" alt="Random Name" width="200" height="300">
       </a>
     </div>
 
     <div class="col-sm-4">
       <p class="text-center"><strong> </strong></p><br>
       <a href="./staff.html" target="_blank">
-        <img src="./assets/images/jakeroberson.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="./assets/images/jakeroberson.jpg" class="img-rounded person" alt="Random Name" width="200" height="300">
       </a>
     </div>
-
 
   </div>
  </div>
