--- a/index.html
+++ b/index.html
@@ -57,17 +57,22 @@
         </div>
   
         <div class="item">
-          <img src="./assets/images/picture4.jpg" alt="Chicago">
+          <img src="./assets/images/pic5.jpg" alt="Chicago">
           <div class="carousel-caption">
           </div>      
         </div>
       
         <div class="item">
-          <img src="./assets/images/picture4.jpg" alt="Los Angeles">
+          <img src="./assets/images/pic6.jpg" alt="Los Angeles">
           <div class="carousel-caption">
           </div>      
         </div>
 
+        <div class="item">
+          <img src="./assets/images/pic7.jpg" alt="Los Angeles">
+          <div class="carousel-caption">
+          </div>      
+        </div>
 
       </div>
   
@@ -106,7 +111,7 @@
     <div class="col-sm-4">
       <p class="text-center"><strong> </strong></p><br>
       <a href="./staff.html" target="_blank">
-        <img src="./assets/images/michaelbrown.jpg" class="img-rounded person" alt="Random Name" width="200" height="300">
+        <img src="./assets/images/michaelbrown.jpg" class="img-circle person" alt="Random Name" width="200" height="300">
       </a>
   
     </div>
@@ -114,14 +119,14 @@
     <div class="col-sm-4">
       <p class="text-center"><strong> </strong></p><br>
       <a href="./staff.html" target="_blank">
-        <img src="./assets/images/mattbrown.jpg" class="img-rounded person" alt="Random Name" width="200" height="300">
+        <img src="./assets/images/mattbrown.jpg" class="img-circle person" alt="Random Name" width="200" height="300">
       </a>
     </div>
 
     <div class="col-sm-4">
       <p class="text-center"><strong> </strong></p><br>
       <a href="./staff.html" target="_blank">
-        <img src="./assets/images/jakeroberson.jpg" class="img-rounded person" alt="Random Name" width="200" height="300">
+        <img src="./assets/images/jakeroberson.jpg" class="img-circle person" alt="Random Name" width="200" height="300">
       </a>
     </div>
 
