respon cal and typo fixed

--- a/roster.html
+++ b/roster.html
@@ -221,7 +221,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                <p>Beech High School, 2021<br><br>Commited:<br>Union University (TN)<br><br>6'1 / 190lbs</p>
+                                <p>Beech High School, 2021<br><br>Committed:<br>Union University (TN)<br><br>6'1 / 190lbs</p>
                               </div>
                           </div>
                       </div>
@@ -238,7 +238,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Springfield High School, 2020<br><br>Commited:<br>Freed Hardeman (TN)<br><br>6'0 / 170lbs</p>
+                                  <p>Springfield High School, 2020<br><br>Committed:<br>Freed Hardeman (TN)<br><br>6'0 / 170lbs</p>
                               </div>
                           </div>
                       </div>
@@ -255,7 +255,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Nolensville High School, 2021<br><br>Uncommited<br><br>5'10 / 150lbs</p>
+                                  <p>Nolensville High School, 2021<br><br>Uncommitted<br><br>5'10 / 150lbs</p>
                               </div>
                           </div>
                       </div>
@@ -272,7 +272,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Lipscomb Academy, 2022<br><br>Uncommited<br><br>5'7 / 150lbs</p>
+                                  <p>Lipscomb Academy, 2022<br><br>Uncommitted<br><br>5'7 / 150lbs</p>
                               </div>
                           </div>
                       </div>
@@ -289,7 +289,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Springfield High School, 2023<br><br>Uncommited<br><br>5'10 / 150lbs</p>
+                                  <p>Springfield High School, 2023<br><br>Uncommitted<br><br>5'10 / 150lbs</p>
                               </div>
                           </div>
                       </div>
@@ -306,7 +306,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Clarksville High School, 2021<br><br>Commited:<br>Volunteer State (TN)<br><br>5'11 / 165lbs</p>
+                                  <p>Clarksville High School, 2021<br><br>Committed:<br>Volunteer State (TN)<br><br>5'11 / 165lbs</p>
                               </div>
                           </div>
                       </div>
@@ -323,7 +323,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>Clarksville High School, 2021<br><br>Uncommited<br><br>5'11 / 175lbs</p>
+                                  <p>Clarksville High School, 2021<br><br>Uncommitted<br><br>5'11 / 175lbs</p>
                               </div>
                           </div>
                       </div>
@@ -340,7 +340,7 @@ h1{
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>White House Heritage High School, 2021<br><br>Uncommited<br><br>5'9 / 155lbs</p>
+                                  <p>White House Heritage High School, 2021<br><br>Uncommitted<br><br>5'9 / 155lbs</p>
                               </div>
                           </div>
                       </div>
@@ -357,7 +357,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Clarksville High School, 2021<br><br>Uncommited<br><br>5'11 / 165lbs</p>
+                              <p>Clarksville High School, 2021<br><br>Uncommitted<br><br>5'11 / 165lbs</p>
                             </div>
                         </div>
                     </div>
@@ -374,7 +374,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Sycamore High School, 2022<br><br>Uncommited<br><br>5'9 / 160lbs</p>
+                              <p>Sycamore High School, 2022<br><br>Uncommitted<br><br>5'9 / 160lbs</p>
                             </div>
                         </div>
                     </div>
@@ -391,7 +391,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Harpeth High School, 2022<br><br>Uncommited<br><br>6'0 / 180lbs</p>
+                              <p>Harpeth High School, 2022<br><br>Uncommitted<br><br>6'0 / 180lbs</p>
                             </div>
                         </div>
                     </div>
@@ -408,7 +408,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p> Sycamore High School, 2022<br><br>Uncommited<br><br>5'10 / 165lbs</p>
+                              <p> Sycamore High School, 2022<br><br>Uncommitted<br><br>5'10 / 165lbs</p>
                             </div>
                         </div>
                     </div>
@@ -425,7 +425,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Homeschool, 2020<br><br>Uncommited<br><br>6'7 / 230lbs</p>
+                              <p>Homeschool, 2020<br><br>Uncommitted<br><br>6'7 / 230lbs</p>
                             </div>
                         </div>
                     </div>
@@ -442,7 +442,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Rossview High School, 2021<br><br>Uncommited<br><br>5'11 / 180lbs</p>
+                              <p>Rossview High School, 2021<br><br>Uncommitted<br><br>5'11 / 180lbs</p>
                             </div>
                         </div>
                     </div>
@@ -459,7 +459,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Gallatin High School, 2020<br><br>Commited:<br>Volunteer State (TN)<br><br>5'11 / 180lbs</p>
+                              <p>Gallatin High School, 2020<br><br>Committed:<br>Volunteer State (TN)<br><br>5'11 / 180lbs</p>
                             </div>
                         </div>
                     </div>
@@ -476,7 +476,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Greenbrier High School, 2022<br><br>Uncommited<br><br>5'11 / 230lbs</p>
+                              <p>Greenbrier High School, 2022<br><br>Uncommitted<br><br>5'11 / 230lbs</p>
                             </div>
                         </div>
                     </div>
@@ -493,7 +493,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Clarksville High School, 2021<br><br>Commited:<br>Covenant College (GA)<br><br>6'1 / 180lbs</p>
+                              <p>Clarksville High School, 2021<br><br>Committed:<br>Covenant College (GA)<br><br>6'1 / 180lbs</p>
                             </div>
                         </div>
                     </div>
@@ -510,7 +510,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Springfield High School, 2022<br><br>Uncommited<br><br>6'1 / 175lbs</p>
+                              <p>Springfield High School, 2022<br><br>Uncommitted<br><br>6'1 / 175lbs</p>
                             </div>
                         </div>
                     </div>
@@ -527,7 +527,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Franklin High School, 2022<br><br>Uncommited<br><br>5'11 / 170lbs</p>
+                              <p>Franklin High School, 2022<br><br>Uncommitted<br><br>5'11 / 170lbs</p>
                             </div>
                         </div>
                     </div>
@@ -544,7 +544,7 @@ h1{
                         </div>
                         <div class="back">
                             <div class="inner">
-                              <p>Christ Presbyterian Academy, 2022<br><br>Uncommited<br><br>6'5 / 255lbs</p>
+                              <p>Christ Presbyterian Academy, 2022<br><br>Uncommitted<br><br>6'5 / 255lbs</p>
                             </div>
                         </div>
                     </div>
