--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 
 
  <!-- Container Schedule -->
- <div id="schedule" class="bg-1">
-  <div class="container">
-    <h3 class="text-center">UPCOMING SCHEDULE</h3>
+ <div id="schedule" class="container">
+  <h3 class="text-center">UPCOMING SCHEDULE</h3>
+  <div class="responsiveCal">
     <iframe src="https://calendar.google.com/calendar/embed?src=vtda6c11j9gjircbi7dj29id80%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="950" height="600" frameborder="0" scrolling="no"></iframe>    
 </div>
 </div>
@@ -212,13 +212,14 @@
   
   <!-- Contact Form -->
   <div id="contact" class="container">
-    <h3 class="text-center">Contact</h3>
+    <h3 class="text-center">CONTACT</h3>
      <div class="row">
       <div class="col-md-4">
         <p><span class="glyphicon glyphicon-map-marker"></span> Tennessee</p>
         <p><span class="glyphicon glyphicon-phone"></span>Phone: 615-772-4676</p>
         <p><span class="glyphicon glyphicon-envelope"></span> throwbacksbaseball@gmail.com</p>
       </div>
+      <br><br>
       <div class="col-md-8">
         <div class="row">
           <div class="col-sm-6 form-group">
